Completely reformatted the layout to be perfectly responsive instead of relying on REM values. Fixed desktop overflow. Also fixed chart to use percentage height's instead of fixed height values which caused some errors on re-sizing.

--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -5,6 +5,8 @@
 body {
   margin: 0;
   height: 100vh;
+  width: 100%;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -13,7 +15,9 @@ body {
 }
 
 #root {
-  height: 100%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 code {
